--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,21 +27,21 @@
   <link rel="canonical" href="{{ meta_url }}">
   <!-- Facebook OpenGraph stuff  https://developers.facebook.com/docs/sharing/best-practices  -->
 
-<!--
+
   <meta property="og:site_name" content="{{ site.title }}"/>
   <meta property="og:title" content="{{ meta_title }}" />
   <meta property="og:url" content="{{ meta_url }}" />
   <meta property="og:description" content="{{ meta_description }}" />
   <meta property="og:image" content="{{site.meta_thumbnail_url}}" />
 
- -->
+
 
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 
   <script src="/assets/js/vendor/jquery.js"></script>
-  <script src="/assets/js/vendor/jquery.colorbox.js"></script>
   <script src="/assets/js/vendor/headroom.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 
 
