--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,9 @@
     <div class="row">
 
       <div class="col-sm-4">
-        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <div class="site-title">
+          <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+        </div>
       </div>
 
     </div>
