--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,9 +14,8 @@
         "template/footer",
         "template/header",
         "template/effects",
-        "template/post",
-        "template/gallery",
-        "template/homepage"
+        "template/homepage",
+        "template/chapter"
 
 ;
 
@@ -27,6 +26,4 @@
 }
 
 
-.sec{
-    margin-bottom: 2.0em;
-}
+
