--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,11 @@
   <div class="container">
 
 <div class="about-story">
-    <h2>About this Story</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit odio laudantium dolor laboriosam voluptates nihil possimus nisi. Veritatis, soluta, perspiciatis nisi ullam impedit vel minus dolorum ex, sint velit!
-</p>
+   <h3> About this Story</h3>
+
+        {% capture xs %}{% include about-footer.md %}{% endcapture %}
+        {{ xs | markdownify }}
+
 </div>
 
 
@@ -19,19 +21,32 @@
 
 
       <ul class="list-inline">
-        <li>
-            <a href="mailto:@stanford.edu" class="btn-social btn-outline"><i class="fa fa-envelope"></i></a>
-        </li>
 
+        {% if site.email %}
         <li>
-            <a href="https://twitter.com/" class="btn-social btn-outline"><i class="fa fa-twitter"></i></a>
+            <a href="mailto:{{site.email}}" class="btn-social btn-outline"><i class="fa fa-envelope"></i></a>
         </li>
+        {% endif %}
+
+        {% if site.twitter_username %}
         <li>
-            <a href="https://www.linkedin.com/in/" class="btn-social btn-outline"><i class="fa fa-linkedin"></i></a>
+            <a href="https://twitter.com/{{site.twitter_username}}" class="btn-social btn-outline"><i class="fa fa-twitter"></i></a>
         </li>
+        {% endif %}
+
+
+        {% if site.linkedin_full_url %}
         <li>
-            <a href="https://github.com/carolinawilson" class="btn-social btn-outline"><i class="fa fa-github"></i></a>
+            <a href="{{site.linkedin_full_url}}" class="btn-social btn-outline"><i class="fa fa-linkedin"></i></a>
         </li>
+        {% endif %}
+
+
+        {% if site.github_repo %}
+        <li>
+            <a href="https://github.com/{{site.github_repo}}" class="btn-social btn-outline"><i class="fa fa-github"></i></a>
+        </li>
+        {% endif %}
 
     </ul>
 
