--- a/assets/_sass/template/_footer.scss
+++ b/assets/_sass/template/_footer.scss
@@ -1,5 +1,38 @@
-.site-footer{
-  background: $gray-lighter;
-  padding-bottom: 5.0em;
-  padding-top: 3.0em;
+
+
+footer.site-footer{
+  color: white;
+  margin-top: 2.0em;
+  padding: 3.0em 0;
+  background: black;
+
+  .container{
+    max-width: $chapter-container-width;
+  }
+
+
+  .btn-social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
+  }
+
+  .btn-outline {
+    margin-top: 15px;
+    border: solid 2px #fff;
+    font-size: 20px;
+    color: #fff;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+  }
+
+  a, a:hover, a:focus, a:active, a.active {
+    outline: 0;
+    color: $brand-primary;
+  }
 }
