--- a/assets/_sass/template/_homepage.scss
+++ b/assets/_sass/template/_homepage.scss
@@ -1,20 +1,23 @@
 @import "template/homepage-banner";
-@import "template/posts-array";
-@import "template/posts-list";
+
 
 .homepage{
 
-}
+  .frontmatter{
+    padding-top: 2.0em;
+    padding-bottom: 2.0em;
 
-.callout{
-  background: $gray-lighter;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  p{
-    font-size: 1.3em;
+    .container{
+       max-width: $chapter-container-width;
+    }
+
+
+    .intro, .toc{
+      font-size: 1.2em;
+      line-height: 1.4em;
+    }
+
+
   }
-
-  padding: 4.0em 3.0em;
-
 }
 
